# tools

./: README.md
IO/Demand-Estimation-main/: notes.docx  pyproject.toml
IO/Demand-Estimation-main/Exercises/Exercise-1/: ps1.py
IO/Demand-Estimation-main/Exercises/Exercise-2/: ps2.py
IO/Demand-Estimation-main/Slides/: 1-Pure-Logit.tex
IO/Demand-Estimation-main/solutions/: exercise-1.py
coding/code-python/: pyproject.toml
material-doc/: material-doc-info.odt
metrics/applied-methods-phd-main/homework/solutions/: hw1-d.R  hw1.py  pyproject.toml
setup/: set-up-info.odt
slides/quarto-slides-html/: quarto-slides-html.qmd
