[tool.poetry]
name = "demand estimation exercise"
version = "0.1.0"
description = ""
authors = ["Hyoungchul Kim <hchul.kim96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.0"
pandas = "^2.2.3"
scipy = "^1.14.1"
sympy = "^1.13.3"
patsy = "^1.0.1"
pyblp = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
