[tool.poetry]
name = "solutions"
version = "0.1.0"
description = ""
authors = ["Hyoungchul Kim <hchul.kim96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
numpy = "^2.2.1"
pandas = "^2.2.3"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
